@@ -36,6 +36,7 @@ Unreleased Version 2.3.0-pre
  * Server Fix: Properly treat autoreset threshold with zero value as no autoreset.
  * Server Feature: Add server setting for a minimum autoreset threshold, to avoid users setting it to a too low value and causing excessive resets. Thanks Bluestrings for suggesting.
  * Server Feature: Allow overriding session size limit for individual sessions. Thanks Bluestrings for suggesting.
+ * Fix: Properly check for session reset size so that oversized resets don't end up in disconnects.
 
 2025-08-14 Version 2.3.0-beta.3
  * Fix: Allow putting labels on a blank brush thumbnail. Thanks hipofiz for reporting.
